--- a/feelow/src/main/resources/templates/index.html
+++ b/feelow/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feelow</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <div class="container">
@@ -13,6 +13,6 @@
     <button onclick="saveEmotion()">저장하기</button>
     <p id="emotionDisplay"></p>
 </div>
-<script src="script.js"></script>
+<script src="javascript/script.js"></script>
 </body>
 </html>
