json으로 음악 커버 이미지 불러오기

--- a/feelow/src/main/resources/templates/index.html
+++ b/feelow/src/main/resources/templates/index.html
@@ -10,8 +10,11 @@
 <div class="container">
     <h2>오늘 하루는 어떠셨나요?<br> 맞춤 노래를 추천해드릴게요!</h2>
     <textarea id="emotionInput" placeholder="오늘 하루 인상깊었던 이야기를 적어주세요"></textarea>
-    <button onclick="saveEmotion()">저장하기</button>
+    <button onclick="saveEmotion()">추천받기</button>
     <p id="emotionDisplay"></p>
+    <p id="trackInfo"></p>
+    <img id="albumCover" src="placeholder.jpg" alt="Initial Image" style="display:none;">
+
 </div>
 <script src="javascript/script.js"></script>
 </body>
