id을 class로 변경 혹시 몰라서

--- a/feelow/src/main/resources/static/css/style.css
+++ b/feelow/src/main/resources/static/css/style.css
@@ -49,14 +49,14 @@ p {
     font-size: 18px;
 }
 
-#resulta {
+.resulta {
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 20px; 
 }
 
-#texta {
+.texta {
     text-align: left;
     max-width: calc(100% - 120px);
     order: 2;
