--- a/feelow/src/main/resources/templates/index.html
+++ b/feelow/src/main/resources/templates/index.html
@@ -11,8 +11,8 @@
     <h2>오늘 하루는 어떠셨나요?<br> 맞춤 노래를 추천해드릴게요!</h2>
     <textarea id="emotionInput" placeholder="오늘 하루 인상깊었던 이야기를 적어주세요"></textarea>
     <button onclick="saveEmotion()">추천받기</button>
-    <div id="resulta">
-        <div id="texta">
+    <div class="resulta">
+        <div class="texta">
             <p id="emotionDisplay"></p>
             <p id="trackInfo"></p>
         </div>
