--- a/feelow/src/main/resources/templates/index.html
+++ b/feelow/src/main/resources/templates/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Feelow</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="imgs/icon.png">
 </head>
 <body>
 <div class="container">
