--- a/feelow/src/main/resources/templates/index.html
+++ b/feelow/src/main/resources/templates/index.html
@@ -6,12 +6,17 @@
     <title>Feelow</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="imgs/icon.png">
+    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
 </head>
 <body>
 <div class="container">
     <h2>오늘 하루는 어떠셨나요?<br> 맞춤 노래를 추천해드릴게요!</h2>
     <textarea id="emotionInput" placeholder="오늘 하루 인상깊었던 이야기를 적어주세요"></textarea>
-    <button onclick="saveEmotion()">추천받기</button>
+    <button type="button" onclick="saveEmotion()">추천받기</button>
+    <div id="loading" style="display: none;">
+        <img src="imgs/loading.gif">
+        <p>로딩중...</p>
+    </div>
     <div class="resulta">
         <div class="texta">
             <p id="emotionDisplay"></p>
