--- a/feelow/src/main/resources/templates/index.html
+++ b/feelow/src/main/resources/templates/index.html
@@ -9,6 +9,9 @@
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
 </head>
 <body>
+<div id="start">
+    <img src="imgs/icon.png" alt="로고" class="logo">
+</div>
 <div class="container">
     <h2>오늘 하루는 어떠셨나요?<br> 맞춤 노래를 추천해드릴게요!</h2>
     <textarea id="emotionInput" placeholder="오늘 하루 인상깊었던 이야기를 적어주세요"></textarea>
