--- a/feelow/src/main/resources/static/css/style.css
+++ b/feelow/src/main/resources/static/css/style.css
@@ -1,9 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap');
+
 body {
-    font-family: 'Arial', sans-serif;
+    font-family: 'Nunito', sans-serif;
     background-color: #f4f4f9;
     color: #333;
     margin: 0;
     padding: 0;
+}
+
+.header {
+    text-align: center;
+    padding: 20px 0;
+}
+
+.header-logo {
+    width: 200px;
 }
 
 .container {
@@ -13,6 +24,10 @@ body {
     background-color: white;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-align: center;
+}
+
+h1 {
+    color: #333;
 }
 
 h2 {
@@ -27,6 +42,11 @@ textarea {
     font-size: 16px;
     border: 1px solid #ccc;
     border-radius: 4px;
+    outline: none;
+}
+
+textarea:focus {
+    border-color: #5c67f2;
 }
 
 button {
@@ -40,26 +60,21 @@ button {
     font-size: 16px;
 }
 
-button:hover {
+button:hover, button:focus {
     background-color: #4a54e1;
-}
-
-p {
-    margin-top: 20px;
-    font-size: 18px;
+    box-shadow: 0 0 8px rgba(92, 103, 242, 0.8);
 }
 
 .resulta {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 20px; 
+    gap: 20px;
 }
 
 .texta {
     text-align: left;
     max-width: calc(100% - 120px);
-    order: 2;
 }
 
 img {
@@ -67,8 +82,8 @@ img {
     height: auto;
     margin-top: 20px;
     border-radius: 8px;
-    order: 1;
 }
+
 #loading {
     width: 100%;
     height: 100%;
@@ -86,35 +101,28 @@ img {
     position: absolute;
     top: 50%;
     left: 50%;
-    z-index: 100;
-    transform: translate(-50%, -50%); /* 중앙 정렬 */
+    transform: translate(-50%, -50%);
 }
 
 #loading > p {
-    position: absolute;
-    top: 60%; /* 이미지 아래 적당한 위치 조정 */
+    position:absolute;
+    top: 60%;
     left: 50%;
-    z-index: 101;
-    transform: translateX(-50%); /* X축 기준 중앙 정렬 */
+    transform: translateX(-50%);
 }
 
 #start {
     position: fixed;
     width: 100%;
     height: 100%;
-    background: #fff; /* 배경색을 원하는 색으로 변경 가능 */
+    background: #fff;
     display: flex;
-    justify-content: center; /* 가로 중앙 정렬 */
-    align-items: center; /* 세로 중앙 정렬 */
-    opacity: 1; /* 시작할 때 투명도는 100% */
-    transition: opacity 1s ease; /* 투명도 변경에 대한 전환 효과 */
+    justify-content: center;
+    align-items: center;
+    opacity: 1;
+    transition: opacity 1s ease;
 }
 
 .logo {
-    width: 150px; /* 로고 크기 조정 */
-    height: auto;
-}
-
-#content {
-    padding: 20px;
+    width: 150px;
 }
