--- a/feelow/src/main/resources/templates/index.html
+++ b/feelow/src/main/resources/templates/index.html
@@ -6,18 +6,21 @@
     <title>Feelow</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="imgs/icon.png">
-    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
 </head>
 <body>
 <div id="start">
     <img src="imgs/icon.png" alt="로고" class="logo">
 </div>
+<div class="header">
+    <img src="imgs/icon.png" alt="Feelow Logo" class="header-logo">
+</div>
 <div class="container">
+    <h1>오늘의 감정, 음악으로 만나보세요</h1>
     <h2>오늘 하루는 어떠셨나요?<br> 맞춤 노래를 추천해드릴게요!</h2>
     <textarea id="emotionInput" placeholder="오늘 하루 인상깊었던 이야기를 적어주세요"></textarea>
     <button type="button" onclick="saveEmotion()">추천받기</button>
     <div id="loading" style="display: none;">
-        <img src="imgs/loading.gif">
+        <img src="imgs/loading.gif" alt="로딩중">
         <p>로딩중...</p>
     </div>
     <div class="resulta">
@@ -25,7 +28,7 @@
             <p id="emotionDisplay"></p>
             <p id="trackInfo"></p>
         </div>
-        <img id="albumCover" src="" alt="Initial Image" style="display:none;">
+        <img id="albumCover" src="" alt="앨범 커버" style="display:none;">
     </div>
 </div>
 <script src="javascript/script.js"></script>
