--- a/feelow/src/main/resources/templates/index.html
+++ b/feelow/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
 <div id="start">
     <img src="imgs/icon.png" alt="로고" class="logo">
 </div>
-<div class="header">
+<div id="header">
     <img src="imgs/icon.png" alt="Feelow Logo" class="header-logo">
 </div>
 <div class="container">
